# gpu_cpu_convolution_compare

./: CMakeLists.txt  ReadMe.md
cpu/: conv_omp.cpp  conv_single.cpp  conv_sse2.cpp
cuda/: conv_cuda.cu  conv_kernel.cu  conv_kernel.h
matlab/: plot_gpusplit.m  plot_speedups.m  plot_times.m  runs_data.csv
report/: main.tex
